...
//        
//        journalNavigationController?.tabBarItem = UITabBarItem(
//            title: "Journal",
//            image: UIImage(named: "journalTabBar") ?? UIImage(systemName: "book"),
//            selectedImage: UIImage(named: "journalTabBar") ?? UIImage(systemName: "book.fill")
//        )
//        journalNavigationController?.tabBarItem.accessibilityIdentifier = "journalTab"
//        
//        analysisNavigationController?.tabBarItem = UITabBarItem(
//            title: "Analysis",
//            image: UIImage(named: "statsTabBar") ?? UIImage(systemName: "chart.bar"),
//            selectedImage: UIImage(named: "statsTabBar") ?? UIImage(systemName: "chart.bar.fill")
//        )
//        analysisNavigationController?.tabBarItem.accessibilityIdentifier = "analysisTab"
//        
//        settingsNavigationController?.tabBarItem = UITabBarItem(
//            title: "Settings",
//            image: UIImage(named: "settingsTabBar") ?? UIImage(systemName: "gear"),
//            selectedImage: UIImage(named: "settingsTabBar") ?? UIImage(systemName: "gear")
//        )
//        settingsNavigationController?.tabBarItem.accessibilityIdentifier = "settingsTab"
//        
//        tabBarController.setViewControllers(
//            [
//                journalNavigationController!,
//                analysisNavigationController!,
//                settingsNavigationController!
...
//        let mockAnalysisService = MockAnalysisService()
//        let mockNotificationService = MockNotificationService()
//        
//        if let longUserName = ProcessInfo.processInfo.environment["UI_TEST_LONG_USER_NAME"] {
//            UserDefaults.standard.set(longUserName, forKey: "testUserFullName")
//        }
//        let successString = ProcessInfo.processInfo.environment["UI_TEST_LOGIN_SUCCESS"]
//        let errorString = ProcessInfo.processInfo.environment["UI_TEST_LOGIN_ERROR"]
//        let shouldSucceed = successString == "true"
//        let shouldShowError = errorString == "true"
//        await mockAuthService.configureForUITesting(shouldSucceed: shouldSucceed, shouldShowError: shouldShowError)
//        
//        await mockQuestionService.configureForUITesting()
...
