...
private enum Images {
    static let apple = "apple"
}

private enum Accessibility {
    static let welcomeLabel = "welcome_label"
    static let loginButton = "login_button"
    static let loginAppleImage = "login_apple_image"
    static let loginButtonLabel = "login_button_label"
    static let loadingView = "loading_view"
}

